@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.5.5" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.5.6" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,12 +38,11 @@
 			<screenshot>resources/screenshots/screenshot03a.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.5.5 - March 19, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Dialog source select now respects setting for
-    "Multiline Source list" like Directory source list.[/I]
-[COLOR yellow]--[/COLOR][I] Added setting to "Sort torrents by size".  The new
-    setting is enabled by default and found under
-    "Torrent Settings".[/I]
+[B][COLOR red]Update - v3.5.6 - March 20, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed torrent cache check for when debrid service
+    is anything other than PM or RD it would drop other service.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed Movies-In Theaters. Some group advanced
+    filtering is currently no longer working on IMDB.[/I]
 		</news>
 	</extension>
 </addon>
