@@ -1,3 +1,9 @@
+[B][COLOR red]Update - v3.5.6 - March 20, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed torrent cache check for when debrid service
+    is anything other than PM or RD it would drop other service.[/I]
+[COLOR yellow]--[/COLOR][I] Fixed Movies-In Theaters. Some group advanced
+    filtering is currently no longer working on IMDB.[/I]
+
 [B][COLOR red]Update - v3.5.5 - March 19, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Dialog source select now respects setting for
     "Multiline Source list" like Directory source list.[/I]
